--- a/MovieList/src/main/resources/css/fx-component.css
+++ b/MovieList/src/main/resources/css/fx-component.css
@@ -79,3 +79,14 @@
     -fx-background-radius: 20px;
     -fx-border-radius: 20px;
 }
+
+.tab {
+    -fx-background-color: #9c20cb;
+    -fx-padding: 5px;
+}
+
+.tab .tab-label {
+    -fx-text-fill: yellow;
+    -fx-font-weight: bold;
+    -fx-font-size: 18px;
+}
